# mac-notify

./: .gitignore  CLAUDE.md  README.md  index.html  package-lock.json  package.json  pyproject.toml  tsconfig.json
.spec/notification-ux-overhaul/: spec.md
.spec/notification-ux-overhaul/notes/: NOTE-001.md  NOTE-002.md
scripts/: send_test_notifications.sh
src/: main.js  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  db.rs  focus.rs  gemini.rs  llm.rs  main.rs  models.rs  orchestrator.rs
