[package]
name = "mac-notify"
version = "0.1.0"
description = "macOS focus mode notification manager"
authors = ["wakamenori"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1.0"
dotenvy = "0.15"
env_logger = "0.11"
log = "0.4"
plist = "1.7"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2", features = ["tray-icon"] }
